# PyNSK

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVLOG.md  EXECUTION_LOG.md  PLAN.md  README.md  TODO.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  conf.py  index.rst
examples/: bubble_collapse.yaml
notebooks/: 01_spatial_foundation.ipynb  02_spatial_convergence.ipynb  03_temporal_convergence.ipynb  04_bubble_collapse.ipynb  README.md
scripts/: README.md  regen_regression_fixtures.py  run_sample_case.py
src/: README.md  _repro.py  assembler.py  bsplines.py  config.py  constitutive.py  initial_conditions.py  io_vtk.py  postprocess.py  quadrature.py  residuals.py  scales.py  solver.py
tests/: README.md  test_assembler.py  test_autodiff.py  test_bsplines.py  test_cmame_reference.py  test_config.py  test_constitutive.py  test_dead_code.py  test_initial_conditions.py  test_input_guards.py  test_io_vtk.py  test_mms.py  test_phase_field_div.py  test_postprocess.py  test_quadrature.py  test_repro.py  test_residuals.py  test_scales.py  test_solver.py
tests/regression/: test_canonical_cases.py
tests/regression/fixtures/: README.md
